Fixed Overflowing content in media screen 480px

--- a/css/header.css
+++ b/css/header.css
@@ -96,6 +96,7 @@
   .yellow-nav {
     margin-top: 15%;
     padding: 0.6rem;
+    z-index: -10;
   }
 
   .top-nav,
